prevent text wrap from being weird

--- a/src/components/page-my-issuances/create-issuance/issuance-confirm/issuance-confirm.less
+++ b/src/components/page-my-issuances/create-issuance/issuance-confirm/issuance-confirm.less
@@ -28,7 +28,8 @@ issuance-confirm {
 			.icon {
 				float: left;
 				font-size: 24px;
-				margin-right: 10px;
+        margin-right: 10px;
+        margin-bottom: 24px;
 			}
 			.restriction-info {
 				color: @gray;
